Fix content gutters on mobile

--- a/_sass/jekyll-theme-peaceful-gates/_homepage.scss
+++ b/_sass/jekyll-theme-peaceful-gates/_homepage.scss
@@ -1,5 +1,8 @@
 .content-gutters {
-    margin: 0pt 10%;
+    margin: 0pt;
+    @include on-desktop {
+        margin: 0pt 10%;
+    }
 }
 
 .homepage-layout {
